# fhir.resources

./: .flake8  .gitignore  .gitmodules  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  appveyor.yml  docker-compose.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
fhir/model/: __init__.py
fhir/resources/: __init__.py  account.py  activitydefinition.py  actordefinition.py  address.py  administrableproductdefinition.py  adverseevent.py  age.py  allergyintolerance.py  annotation.py  appointment.py  appointmentresponse.py  artifactassessment.py  attachment.py  auditevent.py  availability.py  backboneelement.py  backbonetype.py  base.py  basic.py  binary.py  biologicallyderivedproduct.py  biologicallyderivedproductdispense.py  bodysite.py  bodystructure.py  bundle.py  canonicalresource.py  capabilitystatement.py  careplan.py  careteam.py  catalogentry.py  chargeitem.py  chargeitemdefinition.py  citation.py  claim.py  claimresponse.py  clinicalimpression.py  clinicalusedefinition.py  (+222 more)
script/: base_local.py  generate.py  settings.py  text.txt
tests/: __init__.py  conftest.py  fixtures.py  patch_r4b_test.py  test_extension_url_required.py  test_fhirxml.py  test_inspect.py  test_issues.py  test_summary_mode_serialization.py  test_utils_xml.py  test_utils_yaml.py  test_xml_validate_and_dump.py  test_yaml_validate_and_dump.py  utils.py
(+1232 files in other folders)
